# music-downloader

./: .coverage  .env.example  .gitignore  Makefile  README.md  TECHNICAL.md  pyproject.toml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/integrate_zotify_20260205/: index.md  metadata.json  plan.md  spec.md
playlist_files/: lista.txt
src/music_downloader/: __init__.py  cache.py  filesystem.py  gui.py  main.py  spotify.py  utils.py  youtube.py  zotify_downloader.py
src/music_downloader/ui/: __init__.py  main_window.py  panels.py  workers.py
src/music_downloader/ui/styles/: dark_theme.qss
src/music_downloader/ui/widgets/: __init__.py  custom_widgets.py
tests/: test_spotify_zotify.py  test_zotify_downloader.py
