[project]
name = "music-downloader"
version = "0.1.0"
description = "CLI para descargar música desde YouTube y Spotify"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "python-dotenv>=1.2.1",
    "spotipy>=2.25.2",
    "yt-dlp>=2026.2.4",
]

[project.scripts]
music-dl = "music_downloader.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/music_downloader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
